[package]
name = "thecrag-sync"
version = "0.1.0"
authors = ["Daniel Danner <daniel@danner.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
chrono = "0.4"
structopt = "0.3"
lazy_static = "1.4"
regex = "1"
simple-error = "0.2.2"
clap = "2.33.3"
itertools = "0.9.0"
deunicode = "1.1.1"
colored = "2.0.0"
